--- a/Documents/bootcamp/working material/week1/01-Activities/22-Stu_Mini-Project/Main/index.html
+++ b/Documents/bootcamp/working material/week1/01-Activities/22-Stu_Mini-Project/Main/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="text-right">
       <ul>
-        <li> <a href="https://github.com/">Github</a></li>
+        <li> <a href="https://github.com/tah899">Github</a></li>
         <li> <a href="#">Portfolio</a></li>
         <li> <a href="#contact">Contact</a></li>
       </ul>
@@ -21,8 +21,8 @@
   <main>
     <h1 class="text-center">My New Website</h1>
     <figure>
-      <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
-      <figcaption class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</figcaption>
+      <img src="https://www.kindpng.com/picc/m/683-6837731_coming-soon-png-transparent-png.png" alt="Graphic with Coming Soon text">
+      <figcaption class="text-center">Whoops, developer needs more XP :( Check again soon!</figcaption>
     </figure>
     <section id="contact">
       <h2 class="text-center">Contact Me</h2>
@@ -39,6 +39,7 @@
         </ul>
         <div class="text-center">
           <button type="submit">SEND</button>
+          <button type="reset">RESET FORM</button>
         </div>
       </form>
     </section>
