--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Weather Dashboard</title>
+    <title>Impulse Flight with Weather</title>
 </head>
 
 <body>
