--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
