--- a/Documents/New Folder With Items/group-project1/index.html
+++ b/Documents/New Folder With Items/group-project1/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">-->
     <link rel="stylesheet" href="assets/style.css" />
-    <title>Impulse Flight with Weather</title>
+    <title>Impulse Flights with Weather</title>
 </head>
 <body>
 
