Updated HTML and CSS

--- a/Documents/bootcamp/mini-projects/groupproject1/index.html
+++ b/Documents/bootcamp/mini-projects/groupproject1/index.html
@@ -87,7 +87,7 @@
         <img src="https://www.thoughtco.com/thmb/9-iCj7lj21Dd8zFGWnbiVzhi5n8=/1333x1000/smart/filters:no_upscale()/clouds-5b6b4e50c9e77c0050491212.jpg" alt="Footer Logo"
             width="50"
             height="50"/>
-        <span>My Website<br>Copyright &copy; 2016-3010 </span>
+        <span>My Website<br>Copyright &copy; 2021 </span>
     </footer>
 
 </body>
