Please ignore these changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+   <div>>
+        <input type="text" placeholder="Date">
+        <input type="text" placeholder="Starting Location">
+         <input type="text" placeholder="Final Destination">
+    </div>
 
 
     <script src="./assets/js/script.js"></script>
