--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-    <button id="search-button">Click Me</button>
+    <input type="search" id="startingCity">
+    <input type="search" id="endingCity">
+    <input type="date" id="date">
+    <button id="sudmit">Click Me</button>
+
     <div>
         <div id="api-container"></div>
     </div>
