--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <button id=submit class="button is-danger mt-3">submit</button>             
               </p>
                 <h2 class="mt-6">
-                    Past Search Results
+                    Search Results
                 </h2>   
             </div>
           </section>
