--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
             height="50"/>
         <span>My Website<br>Copyright &copy; 2021 </span>
     </footer>
-
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
