Updated front end to make responsive

--- a/index.html
+++ b/index.html
@@ -8,24 +8,18 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Impulse Flights with Weather</title>
     </head>
-
 <body class="body">
-
     <header>
-
              
         <!-- <figure class="image is-50x50">
             <img src="https://www.thoughtco.com/thmb/9-iCj7lj21Dd8zFGWnbiVzhi5n8=/1333x1000/smart/filters:no_upscale()/clouds-5b6b4e50c9e77c0050491212.jpg">
         </figure> 
-
         <a id="logo" href="index.html">
             <img src="https://www.thoughtco.com/thmb/9-iCj7lj21Dd8zFGWnbiVzhi5n8=/1333x1000/smart/filters:no_upscale()/clouds-5b6b4e50c9e77c0050491212.jpg" alt="Logo"
                 width="50"
                 height="50"/> -->
-
             <span class="is-mobile">Impulse Flights and Weather</span>
         </a>
-
         <!-- main navigation links -->
         <nav>
             <ul>
@@ -33,24 +27,21 @@
                 <li><a href="#">Login</a></li>
             </ul>
         </nav>
-
     </header>
-
     <!-- the content -->
     <main>
-
         <section class="hero" class="is-mobile">
             <div class="hero-content">
-              <h1 class="title">
+              <h1 class="title" class="is-mobile">
                 Last Minute Flights and Forecast
               </h1>
-              <p class="subtitle">
+              <p class="subtitle" class="is-mobile">
                 The best way to plan a surprise trip
               </p>
-              <p id="input" class="input is-medium is-one-third is-mobile" class="columns">
+              <p id="input" class="columns is-medium is-one-third is mobile">
                 <input  id="date" type="text" placeholder="Date" class="column">
-                <input  id="start-loc" type="text" placeholder="Starting Location"class="column">
-                <input  id="end-loc" type="text" placeholder="Final Destination"class="column">
+                <input  id="start-loc" type="text" placeholder="Starting Location" class="column">
+                <input  id="end-loc" type="text" placeholder="Final Destination" class="column">
               </p>
               <p>
                   <button id=submit class="button is-danger mt-3">submit</button>             
@@ -75,23 +66,19 @@
         <!-- features section 
         <div class="site-section">
         <div class="site-section-inside">
-
             <div class="section-header">
                 <h2>Key Features</h2>
             </div>
-
             <div class="feature-box">
                 <img src="/assets/css/like.png" alt="Easy to Use">
                 <h5>Easy to Use</h5>
                 <p></p>
             </div>
-
             <div class="feature-box">
                 <img src="/assets/css/faces.png" alt="Fun to Use">
                 <h5>Fun to Use</h5>
                 <p></p>
             </div>
-
             <div class="feature-box">
                 <img src="/assets/css/heart.png" alt="Fun to Use">
                 <h5>You'll Love It</h5>
@@ -111,6 +98,9 @@
             height="50"/>
         <span>My Website<br>Copyright &copy; 2021 </span>
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.7/dayjs.min.js"
+    integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
