Added fieldset to HTML and id for localStorage output, started to append local storage to innerHTML

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
               <p>
                   <button id=submit class="button is-danger mt-3">submit</button>             
               </p>
-                <h2 class="mt-5">
-                    Search Results
-                </h2>   
+                <fieldset class="mt-5">
+                    <legend>Seach Results</legend>
+                    <div id="lsOutput"></div>
+                </fieldset>   
             </div>
           </section>
 
