Changed date placeholder

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 The best way to plan a surprise trip
               </p>
               <p id="input" class="columns is-medium is-one-third is mobile">
-                <input  id="date" type="text" placeholder="Date" class="column">
+                <input  id="date" type="text" placeholder="Date- MM/DD/YYYY" class="column">
                 <input  id="start-loc" type="text" placeholder="Starting Location" class="column">
                 <input  id="end-loc" type="text" placeholder="Final Destination" class="column">
               </p>
