--- a/index.html
+++ b/index.html
@@ -6,22 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <title>Impulse Flights with Weather</title>
     </head>
 <body class="body">
     <header>
-             
-        <!-- <figure class="image is-50x50">
-            <img src="https://www.thoughtco.com/thmb/9-iCj7lj21Dd8zFGWnbiVzhi5n8=/1333x1000/smart/filters:no_upscale()/clouds-5b6b4e50c9e77c0050491212.jpg">
-        </figure> 
-        <a id="logo" href="index.html">
-            <img src="https://www.thoughtco.com/thmb/9-iCj7lj21Dd8zFGWnbiVzhi5n8=/1333x1000/smart/filters:no_upscale()/clouds-5b6b4e50c9e77c0050491212.jpg" alt="Logo"
-                width="50"
-                height="50"/> -->
-            <span class="is-mobile">Impulse Flights and Weather</span>
-        </a>
-
+        <span class="is-mobile">Impulse Flights and Weather</span>
     </header>
     <!-- the content -->
     <main>
