Changed color on flight info, still cant change color for search resutls

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
               </p>
             </div>  
                 <div class="mt-5" class="is-mobile">
-                    <h1 class="is-large is-primary">Seach Results</h1>
+                    <h1 id="results">Seach Results</h1>
                         <div class="columns">
                             <div id="output1" class="column is-half"></div>
                             <div id="output2" class="column is-half"></div>
                         </div>
-                        <div id="flightInfo" class="is-success"></div>
+                        <div id="flightInfo"></div>
                         
                 </div>   
             
