Removed consolelogs on append JS, added hoverable to date pickers. Improved indentation on appended part of JS. Changed background color of date placeholder to match.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 The best way to plan a surprise trip
               </p>
               <p id="input" class="columns is-medium is-one-third is mobile mx-3">
-                <input  id="date" type="text" placeholder="Select Departure Date" class="column is-hoverable has-background-light">
+                <input  id="date" type="text" placeholder="Select Departure Date" class="column is-hoverable has-background-white">
                 <input  id="start-loc" type="text" placeholder="Starting Location" class="column">
                 <input  id="end-loc" type="text" placeholder="Final Destination" class="column">
               </p>
