changed some curly brackets in append part of JS. Changed background color of local storage frontend results to dark with bulma

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>  
                 <div class="mt-5" class="is-mobile">
                     <h1 id="results">Seach Results</h1>
-                    <div>
+                    <div class="has-background-dark">
                         <div class="columns">
                             <div id="output1" class="column is-half"></div>
                             <div id="output2" class="column is-half"></div>
